Require phpxmlrpc/phpxmlrpc with a semantic versioning constraint
Ensure to be able to retrieve updated versions of the package.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "homepage": "https://github.com/szeidler/Revive-XmlRpc",
     "type": "library",
     "require": {
-        "phpxmlrpc/phpxmlrpc": "4.4.2",
+        "phpxmlrpc/phpxmlrpc": "^4.4.2",
         "illuminate/support": "8.*"
     },
     "require-dev": {
