Allow the installation of illuminate/support 9, which is backwards compatible on this library

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,7 @@
     "type": "library",
     "require": {
         "phpxmlrpc/phpxmlrpc": "^4.4.2",
-        "illuminate/support": "8.*"
-    },
-    "require-dev": {
-        "victorjonsson/markdowndocs": "1.3.*"
+        "illuminate/support": "^8.0 || ^9.0"
     },
     "keywords": [
         "revive",
