--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "library",
     "require": {
         "phpxmlrpc/phpxmlrpc": "^4.4.2",
-        "illuminate/support": "^8.0 || ^9.0 || ^10 || ^11"
+        "illuminate/support": "^8.0 || ^9.0 || ^10"
     },
     "keywords": [
         "revive",
