--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
     "homepage": "https://github.com/szeidler/Revive-XmlRpc",
     "type": "library",
     "require": {
-        "phpxmlrpc/phpxmlrpc": "^4.4.2",
-        "illuminate/support": "^8.0 || ^9.0 || ^10"
+        "phpxmlrpc/phpxmlrpc": "^4.11",
+        "illuminate/support": "^8.83 || ^9.52 || ^10.48 || ^11.40",
+        "phpoption/phpoption": "^1.93"
     },
     "keywords": [
         "revive",
